# sandcastles

./: .gitignore  Cargo.toml  README.md  TODO.md  check.nu  flake.nix
src/: awaiter.rs  client.rs  communication.rs  daemon.rs  error.rs  lib.rs  log.rs  main.rs  names.rs  names_adjectives.txt  names_nouns.txt  ports.rs  services.rs  supervisor.rs  test_helpers.rs  test_programs.rs  test_services.rs  timing.rs  wait.rs
src/services/: programs.rs
tests/: examples.rs  server.js
tests/programs/: ignores_termination.sh  waits_for_termination.sh
tests/services/: file_watch.sh  http_hello_world.js
