[package]
name = "sandcastles"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
bincode = "1.3.3"
clap = { version = "4.4.2", features = ["derive"] }
nix = { version = "0.26.4", default-features = false, features = ["signal"] }
serde = { version = "1.0.188", features = ["derive"] }
signal-hook = "0.3.17"

[dev-dependencies]
ntest = "0.9.0"
reqwest = { version = "0.11.20", default-features = false, features = ["blocking"] }
tempfile = "3.8.0"
