[package]
name = "sandcastles"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
bincode = "1.3.3"
bstr = { version = "1.6.2", features = ["serde"] }
chrono = { version = "0.4.28", features = ["serde"] }
clap = { version = "4.4.2", features = ["derive"] }
nix = { version = "0.26.4", default-features = false, features = ["signal"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.105", features = ["preserve_order"] }
serde_with = "3.3.0"
signal-hook = "0.3.17"

[dev-dependencies]
ntest = "0.9.0"
reqwest = { version = "0.11.20", default-features = false, features = ["blocking"] }
tempfile = "3.8.0"
