[package]
name = "sandcastles"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
bstr = { version = "1.6.2", features = ["serde"] }
chrono = { version = "0.4.28", features = ["serde"] }
clap = { version = "4.4.2", features = ["derive"] }
erased-serde = "0.3.31"
lazy_static = "1.4.0"
nix = { version = "0.26.4", default-features = false, features = ["signal"] }
rand = "0.8.5"
rmp-serde = "1.1.2"
ron = "0.8.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.105", features = ["preserve_order"] }
signal-hook = "0.3.17"
tabled = "0.14.0"

[dev-dependencies]
ntest = "0.9.0"
reqwest = { version = "0.11.20", default-features = false, features = ["blocking"] }
tempfile = "3.8.0"
